<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Vertical Guideline (for left and right buttons) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuidePercent="0.5" />

    <!-- Horizontal Guideline (for up and down buttons) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuidePercent="0.5" />

    <!-- Up Button -->
    <Button
        android:id="@+id/button_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_up"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Down Button -->
    <Button
        android:id="@+id/button_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_down"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Left Button -->
    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Right Button -->
    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_right"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Shoot Button (Center) -->
    <Button
        android:id="@+id/button_shoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_shoot"
        app:layout_constraintBottom_toTopOf="@+id/button_down"
        app:layout_constraintTop_toBottomOf="@+id/button_up"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
        app:layout_constraintVertical_bias="0.5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
